# Rotamina

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
deprec/src/intern/viewer/: SkinViewer.cpp
deprec/test/nanogui/: nanogui_example.cpp
deprec/test/project1/: horse.cpp  transform.cpp  wasp.cpp
doc/: tree_view_design.md
res/animation/: sample.anim
res/animations/: wasp_walk.anim
res/morphs/: head1.morph  head2.morph
res/rig/: wasp.rig
res/skeletons/: chain.skel  chain_no_constrain.skel  dragon.skel  head.skel  horse.posed.skel  horse.skel  robot.skel  tree.skel  wasp.skel
res/skins/: head_tex.skin  tube.skin  wasp.skin
script/: generate_header.py
src/intern/animation/: Animation.cpp  AnimationParser.cpp  Channel.cpp  Keyframe.cpp
src/intern/camera/: Camera.cpp
src/intern/object/: Cube.cpp  Object.cpp
src/intern/object/animator/: Animator.cpp  CharacterAnimator.cpp
src/intern/object/character/: AdvanceCharacter.cpp  Character.cpp  CharacterParser.cpp
src/intern/object/cloth/: Cloth.cpp  ClothParticle.cpp  ClothTriangle.cpp  SpringDamper.cpp
src/intern/object/particle/: Particle.cpp  ParticleSystem.cpp
src/intern/object/skeleton/: BallJoint.cpp  Box.cpp  DOF.cpp  IKSkeleton.cpp  Joint.cpp  Skeleton.cpp  SkeletonParser.cpp
src/intern/object/skin/: AdvanceSkin.cpp  MorphParser.cpp  MorphSkin.cpp  Skin.cpp  SkinParser.cpp  SkinVertex.cpp  TexturedSkin.cpp
src/intern/physics/: ForceField.cpp  Gravity.cpp
src/intern/utility/: BMPImage.cpp  Bitmap.cpp  Parser.cpp  Shader.cpp  StopWatch.cpp  Texture.cpp  Tokenizer.cpp  Transform.cpp
src/intern/viewer/: AdvanceCharacterViewer.cpp  AnimationViewer.cpp  Camera.cpp  Canvas.cpp  CharAnimViewer.cpp  CharacterAnimationViewer.cpp  CharacterViewer.cpp  ClothViewer.cpp  IKViewer.cpp  MorphSkinViewer.cpp  Scene.cpp  SkeletonViewer.cpp  SkinViewer.cpp  TexturedSkinViewer.cpp  Viewer.cpp
src/intern/viewer/component/: Camera.cpp  ChannelEditor.cpp  InteractiveScene.cpp  Scene.cpp
src/skeleton/intern/: Joint.cpp
src/viewer/intern/: Viewer.cpp
test/animation/: CMakeLists.txt  ChannelEditor.cpp  animation_test.cpp  basic_viewer_test.cpp  channel_test.cpp  channel_test_2.cpp  char_anim_viewer.cpp  character_animation_editor.cpp  keyframe_test.cpp
test/cloth/: cloth_simulator.cpp  particle_system_test.cpp
test/ik/: chain_ik.cpp  chain_viewer.cpp  tree_ik.cpp
test/other/: enum_test.cpp  time_test.cpp
test/project1/: README.md  cube.cpp  dragon.cpp  dragon_skel.cpp  horse_skel.cpp  main.cpp  my_test.cpp  posed_horse.cpp  posed_horse_skel.cpp  robot.cpp  robot_skel.cpp  shader.cpp  skeleton.cpp  transform.cpp  wasp.cpp  wasp_skel.cpp
test/project2/: advance_head_skin.cpp  gui.cpp  head_skin.cpp  head_skin_morph.cpp  head_skin_textured.cpp  main.cpp  skin.cpp  texture.cpp  texture_viewer.cpp  tube.cpp  tube_skin.cpp  wasp_skin.cpp
test/skeleton/: CMakeLists.txt  dragon_skel.cpp  horse_skel.cpp  posed_horse_skel.cpp  robot_skel.cpp  wasp_skel.cpp
test/skin/: CMakeLists.txt  advance_head_skin.cpp  head_skin.cpp  skin.cpp  texture_viewer.cpp  tube_skin.cpp  wasp_skin.cpp
